--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,7 +12,9 @@
   <body>
     <main class="container">
       <div style="margin: 0 auto; text-align: center;">
-        <h1>Isometrics to MTO</h1>
+        <h1>
+          תוסף Isometrics To MTO - Plant 3D
+        </h1>
       </div>
       <article>
         <div style="padding: 56.25% 0 0 0; position: relative;">
@@ -33,6 +35,36 @@
         </div>
         <script src="https://player.vimeo.com/api/player.js"></script>
       </article>
+      <hgroup>
+        <h2>הערות</h2>
+        <ul>
+          <li>
+            <p>
+              שם המסגרת בכל קובץ חייב להיות אחיד. Plant3D יוצר טבלה בשם Title
+              Block ולכן מומלץ לא לחרוג מזה.
+            </p>
+          </li>
+          <li>
+            <p>
+              התוסף עובד עם טבלה מסוג Table - אובייקט מוכר בסביבת AutoCAD שממנו
+              אפשר למשוך נתונים באופן מדוייק.
+            </p>
+          </li>
+          <li>
+            <p>
+              טבלה הבנויה מ-Line או pLine וטקסט ידני (TEXT או MTEXT) לא ייבדקו
+              על ידי התוסף בשלב זה. תצורה כזאת לא מניבה תוצאות מדוייקות בדוח
+              הסופי.
+            </p>
+          </li>
+          <li>
+            <p>
+              למשתמש חייבת להיות גישת קריאה + כתיבה לתיקיה בה נמצאים קבצי
+              האיזומטריה ותיקיה בה יישמר הדוח
+            </p>
+          </li>
+        </ul>
+      </hgroup>
     </main>
   </body>
 </html>
