--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
               Block ולכן מומלץ לא לחרוג מזה.
             </p>
           </li>
+
+<li>
+            <p>
+              כותרת הטבלה בתא הראשון חייבת להיות אחת מהאפשרויות הבאות: BOM, BILL OF MATERIALS, LIST OF MATERIALS או MATERIALS LIST.
+            </p>
+          </li>
+
           <li>
             <p>
               התוסף עובד עם טבלה מסוג Table - אובייקט מוכר בסביבת AutoCAD שממנו
