--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
               Block ולכן מומלץ לא לחרוג מזה.
             </p>
           </li>
-
-<li>
+          <li>
             <p>
               כותרת הטבלה בתא הראשון חייבת להיות אחת מהאפשרויות הבאות: BOM, BILL OF MATERIALS, LIST OF MATERIALS או MATERIALS LIST.
             </p>
           </li>
-
+          <li>
+            <p>
+              כדי לשמור על סדר עמודות נכון בזמן איסוף המידע והפקת הדוח, רצוי לבחור קבצי איזומטריה מאותו Style.
+            </p>
+          </li>
           <li>
             <p>
               התוסף עובד עם טבלה מסוג Table - אובייקט מוכר בסביבת AutoCAD שממנו
